tests/positive/test_type.orb
import "util/io.orb";

fnc main () () {
    sym p:i32;

    eval (sym (ty0 i32));
    eval (sym (a:ty0 100));
    println_i32 (eval a);

    eval (sym (id0 \cn));
    eval (sym (b:(i32 id0) 101));
    println_i32 (eval b);

    eval (sym (l0 4));
    eval (sym c:(i32 l0));
    eval (= ([] c 0) 102);
    println_i32 (eval ([] c 0));

    eval (sym (d:(ty0 (= ty0 bool)) (tup 103 false)));
    println_i32 (eval (. d 0));

    eval (= ty0 i32);
    = p 200;
    eval (block {
        exit (== ty0 i32);
        = p -1;
    });
    println_i32 p;

    = p 201;
    eval (block {
        exit (!= ty0 (i32 cn));
        = p -1;
    });
    println_i32 p;

    = p 300;
    block {
        exit (== (typeOf 100) i32);
        = p -1;
    };
    println_i32 p;

    = p 301;
    block {
        exit (!= (typeOf p) (i32 cn));
        = p -1;
    };
    println_i32 p;

    = p 302;
    block {
        exit (== (typeOf \()) raw);
        = p -1;
    };
    println_i32 p;
};