tests/negative/test_cn_asgn_arr_cn_elems_nest.orb
fnc main () () {
    sym a:(i32 2);
    = ([] a 0) 0;
    = ([] a 1) 1;

    sym (b:((i32 cn) 2) a);
    = ([] b 0) 100;
};